#10 secure unusual use cases - In Review

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 server.error.include-stacktrace=never
+server.error.include-message=always
 exchange.api.key=${EXCHANGE_API_KEY}
