Instructions for running the app provided

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Collection-Boxes-for-Fundrasing-Events
 spring.datasource.url=jdbc:h2:mem:charitydb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=null
+spring.datasource.password=pass
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
